# DocsBot

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml
app/: config.py  database.py  main.py  models.py  schemas.py  security.py
app/services/: agent.py  document_service.py  pdf_utils.py  storage_service.py  vector_store.py  web_search.py
app/static/: style.css
app/templates/: index.html
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  style.css
